# advent-of-code

./: README.md
2015/: README.md
2016/: .gitignore  CMakeLists.txt  Makefile  README.md
2016/src/: 11.c
2016/src/common/: CMakeLists.txt  arena.c  arena.h  astring.h  astring_test.c  common.h  dynarray.c  dynarray.h  dynarray_test.c  queue.c  queue.h  queue_test.c  testing.cmake  testing.h  text.h  text_test.c  vector.h
2018/: README.md
2019/: README.md
2020/: README.md
2021/: .gitignore  Makefile  README.md
2021/src/: 01.c  01.cpp  02.c  02.cpp
2021/src/common/: IntVector.h  PointerVector.h  common.h  common.hpp  dict.c  dict.h  dict_test.c  dynarray.c  dynarray.h  dynarray_test.c  int_vector.c  int_vector.h  treap.c  treap.h  treap_test.c  vector.c  vector.h  vector_test.c
2022/: README.md
2023/: 05.lua  19.py
